added new fields of name, lastname and email for entity user, also adapted the previously existing mockito tests